Revert "modify scripts for testing"
This reverts commit 02b213296f8adcc37b17b5f107f45be801756c7c.

--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -1,9 +1,8 @@
 name: "Release new version of the script"
 on:
-  #schedule:
-  #  # Every Tuesday at 3pm (whatever timezone is used?)
-  #  - cron: 0 15 * * TUE
-  push
+  schedule:
+    # Every Tuesday at 3pm (whatever timezone is used?)
+    - cron: 0 15 * * TUE
 
 jobs:
   release:
