Adapt name of actual release step

--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: check out current master
         uses: actions/checkout@v2
-      - name: check if script was updated
+      - name: check if script was updated and release new version
         run: |
           bash release.sh
         env:
