--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -1,8 +1,9 @@
 name: "Release new version of the script"
 on:
-  schedule:
+  #schedule:
     # Every Tuesday at 3pm (whatever timezone is used?)
-    - cron: 0 15 * * TUE
+  #  - cron: 0 15 * * TUE
+  push
 
 jobs:
   release:
