--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
+          global: true
           token: '${{ secrets.GITHUB_TOKEN }}'
       - name: check if script was updated and release new version
         run: |
