Rework release script to avoid manual checkout

--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -10,11 +10,20 @@ jobs:
     name: release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
           global: true
           token: '${{ secrets.GITHUB_TOKEN }}'
+      - name: check out master branch
+        uses: actions/checkout@v2
+        with:
+          ref: master
+          path: master
+      - name: check out gh-pages branhc (where we release in)
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: gh-pages
       - name: check if script was updated and release new version
         run: |
           bash release.sh
