--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -26,5 +26,5 @@ jobs:
           path: gh-pages
       - name: check if script was updated and release new version
         run: |
+          cd "${GITHUB_WORKSPACE}/master"
           bash release.sh
-        working-directory: "${GITHUB_WORKSPACE}/master"
