--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -3,7 +3,8 @@ on:
   schedule:
     # Every Tuesday at 3pm (whatever timezone is used?)
     - cron: 0 15 * * TUE
-
+  workflow_dispatch:
+  
 jobs:
   release:
     name: release
