Update package cache first

--- a/.github/workflows/xml-validity-check.yaml
+++ b/.github/workflows/xml-validity-check.yaml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install xmllint
-        run: sudo apt-get install -y libxml2-utils
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-utils
 
       - name: Validate XML
         run: xmllint --noout mudlet-mapper.xml
